--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -10160,6 +10160,32 @@ groups:
         permissions:
         - essentials.interact
         - essentials.build.interact.*
+  fanfic484b8a99116039f0ac54df5305db05dd:
+    inheritance:
+    - commonherotraits
+    worlds:
+      survival:
+        permissions:
+        - ch.alias.jump4
+        - ch.alias.jump3
+        - ch.alias.jump2
+        - ch.alias.jump1
+        - ch.alias.jump0
+        - ch.alias.haste0
+        - ch.alias.haste4
+        - ch.alias.haste3
+        - ch.alias.haste2
+        - ch.alias.haste1
+        - ch.alias.run6
+        - ch.alias.run5
+        - ch.alias.run4
+        - ch.alias.run3
+        - ch.alias.run2
+        - ch.alias.run1
+        - ch.alias.run0
+    options:
+      suffix: '&b'
+      prefix: '&bFan&cFic&dShit&eChar'
 schema-version: 1
 users:
   001b0b15-2f00-4ce1-acff-577e465cb175:
@@ -11664,7 +11690,7 @@ users:
       name: GameTechnologies
   8354ed0d-09cb-4682-bf62-5df3f0e2b412:
     group:
-    - skaar
+    - dannyphantom
     options:
       name: _Vigilance_
     worlds:
@@ -11707,7 +11733,7 @@ users:
       name: katesawesome
   87fb3c6c-5ff6-4bf6-b326-992c6137ea12:
     group:
-    - zion
+    - fanfic484b8a99116039f0ac54df5305db05dd
     options:
       name: God_Doesnt_Exist
       prefix: ''
@@ -13029,7 +13055,7 @@ users:
       name: WarrinPeace
   fbb8c072-4c4b-49c8-948b-26e8ad73099e:
     group:
-    - xtwothree
+    - doctormanhattan
     options:
       name: Camulll
     permissions:
@@ -17959,7 +17985,7 @@ users:
     permissions: []
   b922d7e0-c395-4224-9246-e41c0ef63cc9:
     group:
-    - theinvisibleboy
+    - percyjackson
     worlds:
       greenfield:
         permissions: []
@@ -18123,7 +18149,7 @@ users:
       name: ItsMickeey
   9025e96a-d286-47b0-a709-98d2a4ee42db:
     group:
-    - whitemartian
+    - vision
     options:
       name: TonyBongos
     permissions:
@@ -18685,7 +18711,7 @@ users:
         permissions: []
   b6fcbf5e-dd83-4d9e-93f7-0b1ff3465857:
     group:
-    - missmartian
+    - martianmanhunter
     options:
       name: Guitar_Hero
     worlds:
@@ -18718,7 +18744,7 @@ users:
         permissions: []
   abe08db6-0315-4655-b398-e684cd0b042a:
     group:
-    - firefly
+    - kirito
     worlds:
       greenfield:
         permissions: []
@@ -18730,7 +18756,7 @@ users:
     - multiverse.access.underworld
   fc407fff-19fa-4001-a919-4ed757d3fbb3:
     group:
-    - anarchy
+    - mortal
     worlds:
       greenfield:
         permissions: []
@@ -18780,12 +18806,19 @@ users:
       name: Loaos
   7b48465c-1a27-4a21-9253-37d2687bc0e4:
     group:
-    - warmachine
+    - galactus
+    options:
+      name: EnzoZarx
   12915a36-b114-4e64-8b50-e8904f5f8ee9:
     group:
-    - ghostriderjohnnyblaze
+    - infinitythanos
     options:
       name: BleuSlash
+  9d377ef9-97f1-4f4f-bfec-964323713cbe:
+    group:
+    - flashwalterwest
+    options:
+      name: MadEJGamer
 worlds:
   checkers:
     inheritance:
