--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -16,7 +16,7 @@ v2-logout:
     world: spleeflobby
   8354ed0d-09cb-4682-bf62-5df3f0e2b412:
     group: default
-    world: survival
+    world: greenfield
   fa2821a9-27ed-43e0-99f6-e22aec572a35:
     group: default
     world: greenfield
@@ -49,7 +49,7 @@ v2-logout:
     world: office
   fbb8c072-4c4b-49c8-948b-26e8ad73099e:
     group: default
-    world: survival
+    world: greenfield
   e7d6a1d3-8dac-4814-88f6-c57f0ec3897f:
     group: default
     world: greenfield
@@ -76,7 +76,7 @@ v2-logout:
     world: greenfield
   79bde3af-7aae-489c-a44d-ceba16cc7b02:
     group: default
-    world: survival
+    world: greenfield
   120b63c4-f322-44a8-a7b0-e15bf7d9f879:
     group: default
     world: greenfield
@@ -100,6 +100,7 @@ v2-logout:
     group: underworld
   d0b9fa33-9048-4e30-aea9-8dc23d153ca0:
     world: overvoid
+    group: overvoid
   fa8fd4fe-0071-48da-ab2d-f02fa1a2af58:
     group: default
     world: greenfield
@@ -151,8 +152,8 @@ v2-logout:
     world: overvoid
     group: overvoid
   c8b88131-52d4-4af0-9593-ddcdb3d56058:
-    group: office
-    world: office
+    group: default
+    world: greenfield
   8ab4f4bb-4501-4a6e-a8ff-6506ed631b50:
     group: default
     world: greenfield
@@ -193,8 +194,8 @@ v2-logout:
     group: default
     world: greenfield
   b922d7e0-c395-4224-9246-e41c0ef63cc9:
-    group: underworld
-    world: underworld
+    group: default
+    world: greenfield
   78af88f4-cd13-4950-a737-7d36b15ead56:
     group: default
     world: greenfield
@@ -362,13 +363,13 @@ v2-logout:
     world: survival
   abe08db6-0315-4655-b398-e684cd0b042a:
     group: default
-    world: gotham
+    world: greenfield
   264a5bcf-81f7-4851-8032-94af69428015:
     group: default
     world: greenfield
   fc407fff-19fa-4001-a919-4ed757d3fbb3:
-    group: anarchy
-    world: anarchy
+    group: default
+    world: greenfield
   be4d9e29-2dd5-4ea1-8d74-5d47dc45ff73:
     group: default
     world: greenfield
@@ -439,5 +440,29 @@ v2-logout:
     group: default
     world: greenfield
   12915a36-b114-4e64-8b50-e8904f5f8ee9:
+    group: default
+    world: greenfield
+  15fecaec-a6b7-49f1-9b0b-c8193d9c1b82:
+    group: default
+    world: greenfield
+  9d4f91be-9346-4c51-9c49-00837aa14254:
+    group: default
+    world: greenfield
+  7b48465c-1a27-4a21-9253-37d2687bc0e4:
+    group: default
+    world: greenfield
+  4c32a4ab-0fe1-40b9-b472-066b6e6253a0:
+    group: default
+    world: greenfield
+  52e08967-034f-467b-b125-02f976bbfe9e:
+    group: default
+    world: greenfield
+  b03318bc-895d-4d3f-8710-c991a38980b5:
+    group: infiniteparkour
+    world: infiniteparkour
+  be9c2fcc-e2f9-4733-8b5d-b14ee515c12d:
+    group: default
+    world: greenfield
+  9d377ef9-97f1-4f4f-bfec-964323713cbe:
     group: default
     world: greenfield
