--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -11733,7 +11733,7 @@ users:
       name: katesawesome
   87fb3c6c-5ff6-4bf6-b326-992c6137ea12:
     group:
-    - fanfic484b8a99116039f0ac54df5305db05dd
+    - zion
     options:
       name: God_Doesnt_Exist
       prefix: ''
@@ -11837,7 +11837,7 @@ users:
     - martianmanhunter
   8c9c4ce1-27f6-48d3-a764-8755b790f351:
     group:
-    - martianmanhunter
+    - cosmicarmorsuperman
     options:
       name: Lavasyris
     worlds:
@@ -12785,7 +12785,7 @@ users:
       name: B3nnyXD
   e6de8cf0-af45-44e4-882f-d98446f4b31b:
     group:
-    - quarantine
+    - impulsebartallen
     options:
       name: _BatFam_
     permissions: []
@@ -13055,7 +13055,7 @@ users:
       name: WarrinPeace
   fbb8c072-4c4b-49c8-948b-26e8ad73099e:
     group:
-    - doctormanhattan
+    - supergirl
     options:
       name: Camulll
     permissions:
@@ -15760,12 +15760,12 @@ users:
       name: cman5
   24d4ccf6-91f0-4d37-b132-66dbc89228e1:
     group:
-    - jessequick
+    - supergirl
     options:
       name: Peyton84206
     permissions:
-    - chat.cooldown
     - multiverse.access.underworld
+    - chat.cooldown
     worlds:
       greenfield:
         permissions: []
@@ -16914,7 +16914,7 @@ users:
       name: SepticPanda45
   87bb4f34-8ea7-4e22-a9a6-8c157cf33b1e:
     group:
-    - martianmanhunter
+    - savitar
     options:
       name: MrGold4
     worlds:
@@ -17322,7 +17322,7 @@ users:
       name: AT77
   ca7e8de8-30f0-43c5-9701-982c10ea9459:
     group:
-    - martianmanhunter
+    - mortal
     options:
       name: HerpaDerp10000
     permissions:
@@ -17985,7 +17985,7 @@ users:
     permissions: []
   b922d7e0-c395-4224-9246-e41c0ef63cc9:
     group:
-    - percyjackson
+    - professorx
     worlds:
       greenfield:
         permissions: []
@@ -18064,6 +18064,8 @@ users:
         permissions: []
       fightclub:
         permissions: []
+    permissions:
+    - multiverse.access.underworld
   91255dc0-de1f-46a5-af2c-3e10786ce016:
     group:
     - wolverine
@@ -18425,7 +18427,7 @@ users:
       name: Nok1685
   e37c016f-c5b4-477b-b315-6db019d27cab:
     group:
-    - infinitysilversurfer
+    - missmartian
     worlds:
       fightclub:
         permissions: []
@@ -18716,6 +18718,8 @@ users:
       name: Guitar_Hero
     worlds:
       greenfield:
+        permissions: []
+      fightclub:
         permissions: []
   56bfbb95-e0e4-4a61-ae38-e82e6978afc2:
     group:
