--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -9,8 +9,8 @@ v2-logout:
     group: default
     world: greenfield
   ca7e8de8-30f0-43c5-9701-982c10ea9459:
-    group: spleef
-    world: spleef
+    group: spawn
+    world: spawn
   deb20342-389e-4b5f-808f-24bd22d88aa4:
     group: spleeflobby
     world: spleeflobby
@@ -49,7 +49,7 @@ v2-logout:
     world: office
   fbb8c072-4c4b-49c8-948b-26e8ad73099e:
     group: default
-    world: greenfield
+    world: survival
   e7d6a1d3-8dac-4814-88f6-c57f0ec3897f:
     group: default
     world: greenfield
@@ -81,8 +81,8 @@ v2-logout:
     group: default
     world: greenfield
   8cb79cd3-1e48-4087-9137-a37e164f1494:
-    group: fightclub
-    world: fightclub
+    group: default
+    world: survival
   85b76ef2-b488-4a6c-834b-118c28b7e77c:
     group: default
     world: greenfield
@@ -195,7 +195,7 @@ v2-logout:
     world: greenfield
   b922d7e0-c395-4224-9246-e41c0ef63cc9:
     group: default
-    world: greenfield
+    world: survival
   78af88f4-cd13-4950-a737-7d36b15ead56:
     group: default
     world: greenfield
@@ -290,8 +290,8 @@ v2-logout:
     group: default
     world: greenfield
   e37c016f-c5b4-477b-b315-6db019d27cab:
-    group: parkoureasy
-    world: parkoureasy
+    group: default
+    world: survival
   28bc559e-f6bc-41d5-a9a8-4b176b0c6d0a:
     group: lavahop
     world: lavahop
@@ -317,8 +317,8 @@ v2-logout:
     group: default
     world: greenfield
   24d4ccf6-91f0-4d37-b132-66dbc89228e1:
-    group: spleef
-    world: spleef
+    group: default
+    world: survival
   4e53680c-8362-4898-b210-d7a0c9e11862:
     group: default
     world: greenfield
@@ -464,5 +464,11 @@ v2-logout:
     group: default
     world: greenfield
   9d377ef9-97f1-4f4f-bfec-964323713cbe:
+    group: default
+    world: greenfield
+  f9db19b9-7bb6-4223-ab48-70f136af52f9:
+    group: default
+    world: greenfield
+  e6de8cf0-af45-44e4-882f-d98446f4b31b:
     group: default
     world: greenfield
