--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -38,6 +38,8 @@ groups:
         - ch.alias.jump4
         - magic.wand.use
         - magic.cast.forcepush
+        - magic.cast.forcepull
+        - magic.cast.forcegrip
         - magic.use.yodaforce
   hippolytadc:
     inheritance:
