--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -1251,6 +1251,32 @@ groups:
         - ch.alias.haste2
         - ch.alias.haste3
         - ch.alias.haste4
+  toothless:
+    inheritance:
+    - commonherotraits
+    options:
+      prefix: '&0T&eoo&0th&8le&0ss'
+      suffix: '&8'
+    worlds:
+      survival:
+        permissions:
+        - ch.alias.carryplayer
+        - libsdisguises.disguise
+        - ch.alias.dismountplayer
+        - libsdisguises.undisguise
+        - libsdisguises.disguise.bat.-setinvisible
+        - -essentials.protect.damage.fall
+        - ch.alias.toothless
+        - essentials.fly
+        - essentials.speed.fly
+        - essentials.speed
+        - ch.alias.run0
+        - ch.alias.run1
+        - ch.alias.run2
+        - ch.alias.run3
+        - ch.alias.run4
+        - ch.alias.run5
+        - ch.alias.run6
   apollo:
     inheritance:
     - commonherotraits
