--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -3656,6 +3656,16 @@ groups:
         - ch.alias.gms
         - essentials.fly
         - essentials.teleport
+  chizurukawanami:
+    inheritance:
+    - commonherotraits
+    options:
+      prefix: '&cCh&8i&7z&8u&cru Ka&8w&7a&cna&8m&7i'
+      suffix: '&7'
+    worlds:
+      survival:
+        permissions:
+        - ch.alias.chizurukawanami
   doctormanhattan:
     inheritance:
     - commonherotraits
