--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -19560,6 +19560,9 @@ users:
         permissions: []
     options:
       name: TheMispYT
+  03929c2b-35cb-4d5b-a13e-36179bdb0466:
+    group:
+    - bluelanternbarryallen
 worlds:
   checkers:
     inheritance:
