--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -620,8 +620,8 @@ v2-logout:
     group: default
     world: survival
   66edaf7d-94e7-44cf-9d99-34d3ad90594e:
-    group: spleef
-    world: spleef
+    group: default
+    world: survival
   34a87619-4b40-4ae8-b759-3efa25bbbffd:
     group: default
     world: survival
