--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -11721,7 +11721,7 @@ users:
       name: JustKas
   66edaf7d-94e7-44cf-9d99-34d3ad90594e:
     group:
-    - mortal
+    - firestormraymondstein
     options:
       name: EmmettGaming
     worlds:
@@ -11741,8 +11741,6 @@ users:
         permissions: []
     permissions:
     - multiverse.access.underworld
-    - mortal.machine
-    - machine.mortal
     - crackshot.list
     - chat.cooldown
   6731741a-bfbd-4159-9005-664c5dc9fdb2:
@@ -12618,7 +12616,7 @@ users:
       name: _DerwinFireWolf_
   b6508323-94b4-48bd-b031-4cee732bf98d:
     group:
-    - hulk
+    - flashwallywest
     options:
       name: Skylord_blue
       prefix: ''
@@ -16144,7 +16142,7 @@ users:
       name: acs1018
   1c575be8-a874-4b78-8307-3252351ad276:
     group:
-    - reverseflasheobardthawne
+    - blacklightning
     options:
       name: Leedler268
     worlds:
@@ -19278,7 +19276,7 @@ users:
       name: RogerMiner
   4220f479-2a13-48c6-82a4-58f37008b5d2:
     group:
-    - mewtwo
+    - groot
     options:
       name: Bulldogbuilders
   bf559559-e3c6-4445-bc99-2f2d8a137688:
@@ -19375,7 +19373,7 @@ users:
     - multiverse.access.underworld
   60aa2363-5da1-4f80-885d-280db75b6420:
     group:
-    - redrobin
+    - percyjackson
     options:
       name: Kids8097
     worlds:
@@ -19563,6 +19561,8 @@ users:
   03929c2b-35cb-4d5b-a13e-36179bdb0466:
     group:
     - bluelanternbarryallen
+    options:
+      name: romsifire
 worlds:
   checkers:
     inheritance:
