--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -81,14 +81,14 @@ v2-logout:
     group: default
     world: greenfield
   8cb79cd3-1e48-4087-9137-a37e164f1494:
-    group: default
-    world: greenfield
+    group: spleef
+    world: spleef
   85b76ef2-b488-4a6c-834b-118c28b7e77c:
     group: default
     world: greenfield
   87fb3c6c-5ff6-4bf6-b326-992c6137ea12:
-    world: newminigamehub
-    group: newminigamehub
+    world: survival
+    group: default
   cb871f86-94e5-4bf3-a78e-42f73c2215c4:
     group: office
     world: office
@@ -125,8 +125,8 @@ v2-logout:
     group: default
     world: greenfield
   7c4c0984-39f8-42e9-84a3-f3997af0fef1:
-    group: default
-    world: greenfield
+    group: spleeflobby
+    world: spleeflobby
   6581b21b-c5c2-4bb3-9a88-4f5afb6fa524:
     group: default
     world: speedforce
@@ -537,7 +537,7 @@ v2-logout:
     world: greenfield
   45bcb3ec-1dcb-41fe-ac6e-dac3c41f3ea7:
     group: default
-    world: greenfield
+    world: survival
   0d9b3d6d-b25b-4973-a6aa-ed3c15582446:
     group: default
     world: greenfield
@@ -570,7 +570,7 @@ v2-logout:
     world: wooftywoo
   60aa2363-5da1-4f80-885d-280db75b6420:
     group: default
-    world: greenfield
+    world: survival
   046b6ac4-e2ad-4d78-98fd-86a6967c71a9:
     group: spawn
     world: spawn
@@ -721,3 +721,12 @@ v2-logout:
   d72e9bc8-14b0-412c-a4c8-57bb1be7fc08:
     group: default
     world: greenfield
+  03929c2b-35cb-4d5b-a13e-36179bdb0466:
+    group: default
+    world: survival
+  b6508323-94b4-48bd-b031-4cee732bf98d:
+    group: default
+    world: greenfield
+  8f111c5b-3b7c-4cfa-9228-becd2f75ad7c:
+    group: default
+    world: survival
