--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -4608,6 +4608,23 @@ groups:
         - ch.alias.haste7
         - ch.alias.haste8
         - ch.alias.haste9
+  kitana:
+    inheritance:
+    - commonherotraits
+    options:
+      prefix: '&9K&bi&1ta&9na'
+      suffix: '&9'
+    worlds:
+      survival:
+        permissions:
+        - ch.alias.dismountplayer
+        - ch.alias.carryplayer
+        - powers.wallrun
+        - essentials.tp
+        - ch.alias.kitana
+        - essentials.fly
+        - essentials.speed.fly
+        - essentials.speed
   goldenfrieza:
     inheritance:
     - commonherotraits
