--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -12362,7 +12362,7 @@ users:
       name: katesawesome
   87fb3c6c-5ff6-4bf6-b326-992c6137ea12:
     group:
-    - zion
+    - kitana
     options:
       name: God_Doesnt_Exist
       prefix: ''
@@ -13360,7 +13360,7 @@ users:
       name: BadLionBruh
   e207f46f-ac40-4f49-8b7d-2317c67f1bd0:
     group:
-    - vibe
+    - flashwallywest
     options:
       name: Archieous
     permissions:
