--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -13360,7 +13360,7 @@ users:
       name: BadLionBruh
   e207f46f-ac40-4f49-8b7d-2317c67f1bd0:
     group:
-    - flashwallywest
+    - flashwalterwest
     options:
       name: Archieous
     permissions:
@@ -18770,7 +18770,7 @@ users:
       name: Nightmare6201
   deb20342-389e-4b5f-808f-24bd22d88aa4:
     group:
-    - shazam
+    - mortal
     options:
       name: Waggity
     worlds:
@@ -18779,6 +18779,8 @@ users:
       fightclub:
         permissions: []
     permissions:
+    - mortal.machine
+    - machine.mortal
     - multiverse.access.underworld
   91255dc0-de1f-46a5-af2c-3e10786ce016:
     group:
@@ -19900,7 +19902,7 @@ users:
       name: _PachirisuEX_
   e42aca57-c30e-4b35-90e5-bc2eae2f12b2:
     group:
-    - darthvader
+    - blackflash
     options:
       name: Proudspider12
     worlds:
