--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -820,3 +820,6 @@ v2-logout:
   b57c8f23-0cd0-4169-a885-e0e016d40f95:
     group: default
     world: greenfield
+  77274feb-ee74-4b41-be1e-097c2afd9213:
+    group: plots
+    world: plots
