--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -18729,7 +18729,7 @@ users:
       name: ApolloWolf14
   77274feb-ee74-4b41-be1e-097c2afd9213:
     group:
-    - onepunchman
+    - mortal
     options:
       name: Enderboy1025
     worlds:
