--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -12368,7 +12368,7 @@ users:
       name: katesawesome
   87fb3c6c-5ff6-4bf6-b326-992c6137ea12:
     group:
-    - kitana
+    - chizurukawanami
     options:
       name: God_Doesnt_Exist
       prefix: ''
