--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -12081,6 +12081,8 @@ users:
       office:
         permissions:
         - ch.alias.officekill
+      greenfield:
+        permissions: []
   6b98b09e-71b1-41c0-a1c9-124f458b2295:
     group:
     - flashbartallen
@@ -12368,7 +12370,7 @@ users:
       name: katesawesome
   87fb3c6c-5ff6-4bf6-b326-992c6137ea12:
     group:
-    - chizurukawanami
+    - zion
     options:
       name: God_Doesnt_Exist
       prefix: ''
@@ -18735,7 +18737,7 @@ users:
       name: ApolloWolf14
   77274feb-ee74-4b41-be1e-097c2afd9213:
     group:
-    - mortal
+    - onepunchman
     options:
       name: Enderboy1025
     worlds:
@@ -19908,7 +19910,7 @@ users:
       name: _PachirisuEX_
   e42aca57-c30e-4b35-90e5-bc2eae2f12b2:
     group:
-    - blackflash
+    - joker
     options:
       name: Proudspider12
     worlds:
