--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -60,8 +60,8 @@ v2-logout:
     group: office
     world: office
   4087bc7f-c213-47df-bf2d-41650030be45:
-    world: survival
-    group: default
+    world: office
+    group: office
   16cef4d9-1078-4209-92c6-af6767850007:
     group: default
     world: greenfield
