--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -1,4 +1,19 @@
 groups:
+  jeangrey: 
+     inheritance: 
+     - commonherotraits 
+     options: 
+       prefix: '&eJe&1an &eGr&de&1y' 
+       suffix: '&d' 
+     worlds: 
+       survival: 
+         permissions: 
+         - essentials.msg 
+         - ch.alias.hoveron 
+         - ch.alias.hoveroff 
+         - magic.cast.telekinisis 
+         - magic.cast.forcefield 
+         - magic.commands.cast 
   dumbledore:
     inheritance:
     - commonherotraits
