--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -20253,7 +20253,7 @@ users:
       name: XxRozanxX
   778eb122-9a94-4957-aef0-3e9f22fd24be:
     group:
-    - blackspiderman
+    - blueranger
     worlds:
       greenfield:
         permissions: []
