--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -3,7 +3,7 @@ groups:
     inheritance:
     - commonherotraits
     options:
-      prefix: '&4I&er&4o&en &4Sp&bi&eder''
+      prefix: '&4I&er&4o&en &4Sp&bi&eder&4(PP)'
       suffix: '&b'
     worlds:
       survival:
