--- a/Parties/data.yml
+++ b/Parties/data.yml
@@ -24,17 +24,17 @@ players:
   eb0c7b09-20a0-4a7e-9327-c99e26d11991:
     party: Flashers
     rank: 5
-  28556dea-667d-409f-b2ff-fb4177a20ff2:
-    party: Interview
-    rank: 20
   4087bc7f-c213-47df-bf2d-41650030be45:
     party: theteam
     rank: 20
   dbb47887-bfbd-40e6-bfec-3d1053ea3aff:
     party: INJUSTICE
     rank: 20
-  fbb8c072-4c4b-49c8-948b-26e8ad73099e:
-    party: INJUSTICE
+  4ff867f5-6cab-413e-9fad-e4d77ca48778:
+    party: AHHHHH
+    rank: 20
+  28556dea-667d-409f-b2ff-fb4177a20ff2:
+    party: AHHHHH
     rank: 5
 parties:
   SuperHero:
@@ -60,10 +60,6 @@ parties:
     members:
     - 9025e96a-d286-47b0-a709-98d2a4ee42db
     - eb0c7b09-20a0-4a7e-9327-c99e26d11991
-  Interview:
-    leader: 28556dea-667d-409f-b2ff-fb4177a20ff2
-    members:
-    - 28556dea-667d-409f-b2ff-fb4177a20ff2
   theteam:
     leader: 4087bc7f-c213-47df-bf2d-41650030be45
     members:
@@ -72,4 +68,8 @@ parties:
     leader: dbb47887-bfbd-40e6-bfec-3d1053ea3aff
     members:
     - dbb47887-bfbd-40e6-bfec-3d1053ea3aff
-    - fbb8c072-4c4b-49c8-948b-26e8ad73099e
+  AHHHHH:
+    leader: 4ff867f5-6cab-413e-9fad-e4d77ca48778
+    members:
+    - 4ff867f5-6cab-413e-9fad-e4d77ca48778
+    - 28556dea-667d-409f-b2ff-fb4177a20ff2
