--- a/WorldGuard/worlds/policeoffice/regions.yml
+++ b/WorldGuard/worlds/policeoffice/regions.yml
@@ -38,14 +38,6 @@ regions:
         owners: {}
         type: cuboid
         priority: 1
-    lightswitch:
-        min: {x: 10.0, y: 76.0, z: 50.0}
-        max: {x: 11.0, y: 76.0, z: 50.0}
-        members: {}
-        flags: {interact: deny, interact-group: NON_MEMBERS}
-        owners: {}
-        type: cuboid
-        priority: 1
     evidenceroom:
         parent: police
         min: {x: -14.0, y: 75.0, z: 22.0}
@@ -54,6 +46,14 @@ regions:
         flags: {deny-message: Restricted Area, entry: deny, greeting: Evidence Room,
             block-break: allow, block-place-group: MEMBERS, pistons: allow, block-place: allow,
             block-break-group: MEMBERS}
+        owners: {}
+        type: cuboid
+        priority: 1
+    lightswitch:
+        min: {x: 10.0, y: 76.0, z: 50.0}
+        max: {x: 11.0, y: 76.0, z: 50.0}
+        members: {}
+        flags: {interact: deny, interact-group: NON_MEMBERS}
         owners: {}
         type: cuboid
         priority: 1
@@ -83,7 +83,7 @@ regions:
         members:
             unique-ids: [66edaf7d-94e7-44cf-9d99-34d3ad90594e, 0130299a-4489-429d-b4eb-68643a4c6ac8,
                 c8b88131-52d4-4af0-9593-ddcdb3d56058, ca7e8de8-30f0-43c5-9701-982c10ea9459,
-                a8185de3-b053-4aca-9eb6-d98728e476ad, 869b4227-b51e-452e-adbd-48759a6848dd]
+                a8185de3-b053-4aca-9eb6-d98728e476ad]
         flags: {}
         owners: {}
         type: global
