--- a/xInventories/config.yml
+++ b/xInventories/config.yml
@@ -105,7 +105,9 @@ groups:
 - policeoffice
 - moblottery
 - infectiontag
+- freezetag
 worlds:
+  freezetag: freezetag
   infectiontag: infetiontag
   policeoffice: policeoffice
   moblottery: moblottery
