--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -1,25 +1,25 @@
 v2-logout:
   474707f7-f8b4-43ea-8978-9cae17917e82:
-    group: office
-    world: office
+    group: default
+    world: survival
   7d8daa50-d197-41eb-9681-f20b863f9d8a:
     group: default
     world: survival
   e67f0790-9bf4-4ba9-8faf-c4185dc5d8bd:
-    world: greenfield
+    world: survival
     group: default
   ca7e8de8-30f0-43c5-9701-982c10ea9459:
     world: policeoffice
     group: policeoffice
   deb20342-389e-4b5f-808f-24bd22d88aa4:
-    world: turbotowers
-    group: turbotowers
+    world: greenfield
+    group: default
   8354ed0d-09cb-4682-bf62-5df3f0e2b412:
+    group: spawn
+    world: spawn
+  fa2821a9-27ed-43e0-99f6-e22aec572a35:
     group: default
     world: greenfield
-  fa2821a9-27ed-43e0-99f6-e22aec572a35:
-    group: formuladrift
-    world: formuladrift
   dd6004fe-0541-4028-8b29-1f1b1896a68a:
     group: default
     world: greenfield
@@ -33,8 +33,8 @@ v2-logout:
     group: default
     world: greenfield
   f621586e-8ef8-448d-9264-86b61375052e:
-    group: spleeflobby
-    world: spleeflobby
+    group: escaperoom
+    world: escaperoom
   c46d7b46-68c0-45f8-8fa6-b3def4682703:
     world: office
     group: office
@@ -54,8 +54,8 @@ v2-logout:
     group: default
     world: greenfield
   9025e96a-d286-47b0-a709-98d2a4ee42db:
-    group: overvoid
-    world: overvoid
+    group: policeoffice
+    world: policeoffice
   9cb07b82-4d2f-446f-b194-4f83dee1e02f:
     group: office
     world: office
@@ -87,8 +87,8 @@ v2-logout:
     group: default
     world: greenfield
   87fb3c6c-5ff6-4bf6-b326-992c6137ea12:
-    world: parkoureasy
-    group: parkoureasy
+    world: greenfield
+    group: default
   cb871f86-94e5-4bf3-a78e-42f73c2215c4:
     group: policeoffice
     world: policeoffice
@@ -96,8 +96,8 @@ v2-logout:
     world: office
     group: office
   869b4227-b51e-452e-adbd-48759a6848dd:
-    world: turbotowers
-    group: turbotowers
+    world: spawn
+    group: spawn
   d0b9fa33-9048-4e30-aea9-8dc23d153ca0:
     world: overvoid
     group: overvoid
@@ -105,8 +105,8 @@ v2-logout:
     group: fightclub
     world: fightclub
   a8f8ce5f-64ee-469d-9b3f-7d7069898694:
-    group: spawn
-    world: spawn
+    group: default
+    world: greenfield
   a90bff3f-1f10-4734-9f90-2dfb0660b66e:
     group: default
     world: survival
@@ -134,8 +134,8 @@ v2-logout:
     group: default
     world: speedforce
   7b02decc-d614-4041-9c25-1d3d96440d72:
-    group: office
-    world: office
+    group: default
+    world: greenfield
   e0fc9cdc-59e8-4f9d-bc86-20648906953e:
     group: default
     world: greenfield
@@ -152,8 +152,8 @@ v2-logout:
     world: overvoid
     group: overvoid
   c8b88131-52d4-4af0-9593-ddcdb3d56058:
-    world: spleeflobby
-    group: spleeflobby
+    world: plots
+    group: plots
   8ab4f4bb-4501-4a6e-a8ff-6506ed631b50:
     group: default
     world: greenfield
@@ -170,8 +170,8 @@ v2-logout:
     group: default
     world: survival
   28556dea-667d-409f-b2ff-fb4177a20ff2:
-    world: overvoid
-    group: overvoid
+    world: office
+    group: office
   2e9ef16a-5330-4344-b4b1-42aeb008071b:
     group: policeoffice
     world: policeoffice
@@ -179,8 +179,8 @@ v2-logout:
     group: policeoffice
     world: policeoffice
   4ff867f5-6cab-413e-9fad-e4d77ca48778:
-    group: office
-    world: office
+    group: freezetag
+    world: freezetag
   60b8ea61-b653-4cc5-8c7f-06db0ec25507:
     group: default
     world: greenfield
@@ -188,14 +188,14 @@ v2-logout:
     group: default
     world: greenfield
   dccc293a-5cb1-45e8-a895-a6301ca2960e:
-    group: spleef
-    world: spleef
+    group: default
+    world: greenfield
   2db62a35-6065-4c2c-964d-efc5e0ace18a:
     group: default
     world: greenfield
   b922d7e0-c395-4224-9246-e41c0ef63cc9:
     group: default
-    world: greenfield
+    world: survival
   78af88f4-cd13-4950-a737-7d36b15ead56:
     group: default
     world: greenfield
@@ -211,8 +211,8 @@ v2-logout:
     group: default
     world: greenfield
   3419f049-aecb-4494-8a4d-a1452fd143ca:
-    group: moblottery
-    world: moblottery
+    group: freezetag
+    world: freezetag
   2357ee1a-0c09-4375-8412-adfb7595762d:
     group: default
     world: greenfield
@@ -316,8 +316,8 @@ v2-logout:
     group: default
     world: greenfield
   24d4ccf6-91f0-4d37-b132-66dbc89228e1:
-    group: overvoid
-    world: overvoid
+    group: moblottery
+    world: moblottery
   4e53680c-8362-4898-b210-d7a0c9e11862:
     group: default
     world: greenfield
@@ -399,8 +399,8 @@ v2-logout:
     group: default
     world: greenfield
   a8185de3-b053-4aca-9eb6-d98728e476ad:
-    world: greenfield
-    group: default
+    world: policeoffice
+    group: policeoffice
   03bd377c-eb0d-4e84-b733-e27fd9a954b1:
     group: default
     world: greenfield
@@ -432,8 +432,8 @@ v2-logout:
     group: default
     world: greenfield
   7291d76a-7422-465f-abc8-84b080738d92:
-    group: policeoffice
-    world: policeoffice
+    group: default
+    world: greenfield
   4abf1304-33e1-415b-bfd7-baab55caae40:
     group: default
     world: greenfield
@@ -456,8 +456,8 @@ v2-logout:
     group: default
     world: greenfield
   b03318bc-895d-4d3f-8710-c991a38980b5:
-    group: runner
-    world: runner
+    group: parkourhub
+    world: parkourhub
   be9c2fcc-e2f9-4733-8b5d-b14ee515c12d:
     group: default
     world: survival
@@ -487,7 +487,7 @@ v2-logout:
     world: greenfield
   4220f479-2a13-48c6-82a4-58f37008b5d2:
     group: default
-    world: greenfield
+    world: survival
   bf559559-e3c6-4445-bc99-2f2d8a137688:
     group: default
     world: survival
@@ -534,8 +534,8 @@ v2-logout:
     group: default
     world: greenfield
   45bcb3ec-1dcb-41fe-ac6e-dac3c41f3ea7:
-    group: default
-    world: greenfield
+    group: overvoid
+    world: overvoid
   0d9b3d6d-b25b-4973-a6aa-ed3c15582446:
     group: default
     world: greenfield
@@ -633,8 +633,8 @@ v2-logout:
     group: default
     world: greenfield
   8c6c75f3-c34a-4123-b62b-064056f8d95e:
-    group: parkoureasy
-    world: parkoureasy
+    group: office
+    world: office
   7d7c0bf4-6f04-4081-87a5-a3827e8ae331:
     group: speedforce
     world: speedforce
@@ -780,8 +780,8 @@ v2-logout:
     group: default
     world: greenfield
   40eecf60-9509-4262-bf54-7278851a7b8a:
-    group: underworld
-    world: underworld
+    group: default
+    world: greenfield
   e9a61dbb-3a32-43aa-876f-c11fd78b69de:
     group: default
     world: greenfield
@@ -810,8 +810,8 @@ v2-logout:
     group: default
     world: greenfield
   e42aca57-c30e-4b35-90e5-bc2eae2f12b2:
-    group: spleef
-    world: spleef
+    group: default
+    world: greenfield
   3d0f7441-3d2c-4226-b460-78575d03bfad:
     group: default
     world: survival
@@ -847,7 +847,7 @@ v2-logout:
     world: spawn
   0a5357e9-2f1e-4fc6-87cc-dc03d592bd20:
     group: default
-    world: survival
+    world: greenfield
   86e8be95-04cd-483b-a51a-c6d52e71190d:
     group: default
     world: survival
@@ -878,8 +878,8 @@ v2-logout:
     group: default
     world: greenfield
   eca9177a-9ef2-4e69-b1fc-804d9d848303:
-    group: default
-    world: greenfield
+    world: freezetag
+    group: freezetag
   f310e030-27e8-4f04-b99e-551f89f2d2d4:
     group: spawn
     world: spawn
@@ -1016,8 +1016,8 @@ v2-logout:
     group: default
     world: survival
   ef7bcc96-3ac0-4dc6-aae7-019e5c6dda2e:
-    group: fightclub
-    world: fightclub
+    group: default
+    world: greenfield
   471de574-561c-456d-b961-09310747b948:
     group: default
     world: greenfield
@@ -1063,3 +1063,81 @@ v2-logout:
   3ef45cda-e3aa-48a7-9dfa-1e80f21944b1:
     group: default
     world: greenfield
+  fe22d742-7a5d-450a-b0f4-db71263aa1ba:
+    group: default
+    world: greenfield
+  623ebad9-96a3-4a06-969e-722af772afa7:
+    group: default
+    world: greenfield
+  fba571fa-dfe0-4949-b2ee-52d88baadf98:
+    group: default
+    world: survival_nether
+  0f4226a0-9d24-4000-9990-89e10c72a299:
+    group: default
+    world: greenfield
+  3eec59e9-30ad-4023-a374-9f756663daf4:
+    group: default
+    world: greenfield
+  04bc6d43-0986-4ee1-a424-6fc09968699e:
+    group: default
+    world: greenfield
+  8cb964f5-d345-4a65-8811-cb3b0c11b51b:
+    group: moblottery
+    world: moblottery
+  82ead916-522f-4129-a59b-e1fca73c2e22:
+    group: spawn
+    world: spawn
+  14583bba-da31-48ef-97e0-0043479ed159:
+    group: default
+    world: greenfield
+  3ae730b6-3f08-4134-9232-cc9cc14e737b:
+    group: default
+    world: greenfield
+  df91ba75-f8e3-4da4-8ec1-2fcda51d5883:
+    group: office
+    world: office
+  ef6f28e9-b361-4531-bce0-a316faad0e93:
+    group: default
+    world: greenfield
+  c7f35ddb-e2a1-4665-97c0-5e89bcd68501:
+    group: default
+    world: greenfield
+  ecc59250-3aff-42ba-a172-9e8b37c0d578:
+    group: default
+    world: greenfield
+  e8936c83-b386-4b0e-b383-2ecf7c9511e6:
+    group: default
+    world: greenfield
+  19306e75-fc8d-44db-aeb9-7277b429b20a:
+    group: default
+    world: survival
+  a10faeb1-9572-455d-84c0-109dc61b4a37:
+    group: overvoid
+    world: overvoid
+  4d059c12-7a19-4af3-b8d7-aaa702015d5b:
+    group: default
+    world: greenfield
+  debef98b-23ba-461c-847e-968b83f7c891:
+    group: overvoid
+    world: overvoid
+  f56713b1-d391-4726-b814-0f3f2ec815c4:
+    group: default
+    world: greenfield
+  2015bc7d-316e-4939-b5d1-c1cf0062ad8d:
+    group: default
+    world: survival
+  64b8a2a3-1ddf-4acd-9c4d-b601a4f93f86:
+    group: default
+    world: survival
+  0c449177-5904-421d-b764-1a80cbe25beb:
+    group: default
+    world: greenfield
+  b614a321-1c6c-44f0-b410-95f0e07cc7d4:
+    group: default
+    world: survival
+  27966eda-bf56-48ca-9924-a7a71700562d:
+    group: plots
+    world: plots
+  80c1046d-87f7-42c0-bd2c-3926c0107425:
+    group: default
+    world: survival
