--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -10314,7 +10314,7 @@ groups:
         - ch.alias.run1
         - ch.alias.run0
     options:
-      prefix: '&6Hero'
+      prefix: '&4Jason Grace'
   fanfic4087bc7fc21347dfbf2d41650030be45:
     inheritance:
     - commonherotraits
@@ -11041,7 +11041,7 @@ users:
       name: freshlybaked1
   0130299a-4489-429d-b4eb-68643a4c6ac8:
     group:
-    - mortal
+    - onslaught
     options:
       name: xDcGamer_MCU
     worlds:
@@ -18652,7 +18652,7 @@ users:
       name: SacabooCDE
   dccc293a-5cb1-45e8-a895-a6301ca2960e:
     group:
-    - onepunchman
+    - mortal
     worlds:
       fightclub:
         permissions: []
