--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -12543,7 +12543,7 @@ users:
       name: katesawesome
   87fb3c6c-5ff6-4bf6-b326-992c6137ea12:
     group:
-    - zion
+    - kitana
     options:
       name: God_Doesnt_Exist
       prefix: ''
@@ -18156,7 +18156,7 @@ users:
       name: AT77
   ca7e8de8-30f0-43c5-9701-982c10ea9459:
     group:
-    - mortal
+    - spectre
     options:
       name: HerpaDerp10000
     permissions:
@@ -18652,7 +18652,7 @@ users:
       name: SacabooCDE
   dccc293a-5cb1-45e8-a895-a6301ca2960e:
     group:
-    - mortal
+    - blackracerwilliewalker
     worlds:
       fightclub:
         permissions: []
@@ -20514,6 +20514,8 @@ users:
   c9125267-b5c8-42ed-8572-cb3d1d07c9da:
     group:
     - invisiblewoman
+    options:
+      name: WhiteWolf001
 worlds:
   checkers:
     inheritance:
