--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -190,7 +190,7 @@ v2-logout:
     world: greenfield
   dccc293a-5cb1-45e8-a895-a6301ca2960e:
     group: default
-    world: greenfield
+    world: survival
   2db62a35-6065-4c2c-964d-efc5e0ace18a:
     group: default
     world: greenfield
@@ -201,8 +201,8 @@ v2-logout:
     group: default
     world: greenfield
   0130299a-4489-429d-b4eb-68643a4c6ac8:
-    world: moblottery
-    group: moblottery
+    world: greenfield
+    group: default
   aafab66a-64f9-403e-a92c-1a20bfde19a7:
     group: default
     world: greenfield
@@ -318,8 +318,8 @@ v2-logout:
     group: default
     world: greenfield
   24d4ccf6-91f0-4d37-b132-66dbc89228e1:
-    group: default
-    world: greenfield
+    group: extremesumo
+    world: extremesumo
   4e53680c-8362-4898-b210-d7a0c9e11862:
     group: default
     world: greenfield
@@ -919,8 +919,8 @@ v2-logout:
     group: default
     world: greenfield
   3be4c2e1-b94f-4644-be50-6b06448019fd:
-    group: default
-    world: greenfield
+    group: spleeflobby
+    world: spleeflobby
   85aa44f4-9f3b-45dc-9ea5-9bf2b00d9152:
     group: default
     world: greenfield
@@ -1177,5 +1177,11 @@ v2-logout:
     group: spleeflobby
     world: spleeflobby
   648d8eae-fe1e-4b6a-a418-9a62cf121906:
+    group: default
+    world: greenfield
+  7ffb361c-7450-4cc4-a9ae-515643ee26bb:
+    group: spawn
+    world: spawn
+  c9125267-b5c8-42ed-8572-cb3d1d07c9da:
     group: default
     world: greenfield
